Working Assembler Interpreter Kata Working code at Java 17 - not supported by the Kata system!